assets/css/rtl-basic-mobile.css
/* ... */
#page_loader 
{
    width: 100px;
    height: 40px;
    position: fixed;
    top: 50%;
    left: 50%;
    z-index: 990;
    margin: -20px -50px;
}

#page_loader div 
{
    width: 20px;
    height: 20px;
    background: #FFF;
    border-radius: 50%;
    position: absolute; 
    z-index: 990;
}

#d1 
{ 
    animation: animate 2s linear infinite;
}

#d2 
{ 
    animation: animate 2s linear infinite -.4s; 
}

#d3 
{
    animation: animate 2s linear infinite -.8s; 
}

#d4 
{ 
    animation: animate 2s linear infinite -1.2s; 
} 

#d5 
{ 
    animation: animate 2s linear infinite -1.6s; 
}

@keyframes animate 
{
    0% { left: 100px; top:0}
    80% { left: 0; top:0;}
    85% { left: 0; top: -20px; width: 20px; height: 20px;}
    90% { width: 40px; height: 15px; }
    95% { left: 100px; top: -20px; width: 20px; height: 20px;}
    100% { left: 100px; top:0; }
}



.ui-tooltip, .esign-arrow:after 
{
    background: black;
    border: 1px solid white;
    width:300px;
    position:fixed;
}

.ui-tooltip 
{
    padding: 10px 10px!important;
    color: white!important;
    border-radius: 5px!important;
    font: 13px "Helvetica Neue", Sans-Serif!important;
    text-transform: normal;
    background: #0c0e11!important;
    box-shadow: none!important;
    line-height:1.3em!important;
    max-width: 250px!important;
    min-width: auto !important;
    margin: 0 auto!important;
}

.sign-arrow {
    position: absolute;
    top: 0;
    right: -80px !important;
    width: 80px;
    height: 70px;
}

.esign-arrow.top 
{
    top: -16px;
    bottom: auto;
}

.esign-arrow.left
{
    left: 20%;
}

.esign-arrow:after 
{
    content: "";
    position: absolute;
    left: 20px;
    top: -20px;
    width: 25px;
    height: 25px;
    box-shadow: 6px 5px 9px -9px black;
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    tranform: rotate(45deg);
}

.esign-arrow.top:after 
{
    bottom: -20px;
    top: auto;
}

.esig_header_top
{
    margin-top:20px;
    display:inline-block;
    position:relative;
    width:100%;
}

.esig_top_left 
{   
    position:relative;
    float:left;
    display:inline-block ; 
    width:65% ;
} 

.esig_top_right
{ 
    position:relative;
    float:left;
    display:inline-block ;  
    width:35% ; 
    margin-top: 20px;
    margin-bottom: 10px;
} 


.col-sm-8
{
    max-width:345px;
    padding-left:0px !important;
}



.rtl-clearfix-history
{
    top:40px;
   
}

.rtl-site-name{
    float: left !important;
    direction: rtl;
}


table.responsive-table td:nth-child(1):before,
table.responsive-table td:nth-child(2):before {
    position: absolute;
    right: .5em;
    font-weight: 700
}
.audit-wrapper #audit-trail-wrapper .main .history table tr td:first-child,
.audit-wrapper #audit-trail-wrapper .main .history table th:first-child{
    padding-left: 1% !important; 
  padding-right: 30% !important; 
    text-align: right;
}

table.display td, table.display th {
text-align: right;
}

table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
    padding-left: 0% !important;
    padding-right: 30% !important;
}







#audit-trail-wrapper .header .logo{
    padding-top: 0px !important;
}

#audit-trail-wrapper .header .subcaption .image-wrapper{
    padding-left: 5px !important;
}



table.responsive-table td:nth-child(1):before,
table.responsive-table td:nth-child(2):before {
    position: absolute;
    right: .5em;
    font-weight: 700
}

@media(orientation:portrait) {
.audit-wrapper #audit-trail-wrapper .main .history table tr td:first-child,
.audit-wrapper #audit-trail-wrapper .main .history table th:first-child{
    padding-left: 1% !important; 
  padding-right: 30% !important; 
    text-align: right;
}
#audit-trail-wrapper .header {
    padding-left: 15px;
}
.esig-right{
    float:left !important;
    text-align: left !important;
}
.esig-left{
    float:right !important;
}

}

table.display td, table.display th {
text-align: right;
}

table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
    padding-left: 0% !important;
    padding-right: 30% !important;
}

#mobile-adopt-sign {
    float: left !important;
    padding-bottom: 10px;
}

.sig-header-next-page div:first-child {
    float: right !important;
}
.container.signature-description-nextpage {
    padding-top: 10px;
}

@media(orientation: landscape) {

    .audit-wrapper #audit-trail-wrapper .main .history table tr td:first-child, .audit-wrapper #audit-trail-wrapper .main .history table th:first-child{
        padding-right: 0px !important;
        
    }

    .signatures .form-inline .col-sm-6 {
        float: right ;
    }
    .signatures .col-sm-6 {
        float: right !important;
        margin-left: 1px !important;
    }

    .blog-url.pdf-blog-url {
        float: left;
    }

    #audit-trail-wrapper .header .logo {
      
        float: left !important;
        padding-left: 20px !important;
    }

    #audit-trail-wrapper .left{
        float: right !important;
    }

    .esig-right{
        float:left !important;
        text-align: left !important;
    }
    .esig-left{
        float:right !important;
    }
    

    .container.sig-header-next-page div {
        float: right !important;
    }
    .container.signature-description-nextpage {
        padding-top: 20px;
    }
    .col.left.rtl-signature-certificate {
        width: 70%;
    }
   
}

@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
    .signatures .col-sm-6 {
        float: right;
    }

    .blog-url.pdf-blog-url {
        float: right ;
    }
    .audit-signature.pull-right {
        float: left !important;
        margin-left: 5px !important;
        margin-right: 0px !important;
    }
   }

